[package]
name = "cells_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cell_family"
path = "src/cell_family.rs"

[[bin]]
name = "ghost_cell"
path = "src/ghost_cell.rs"

[[bin]]
name = "qcell"
path = "src/qcell.rs"

[[bin]]
name = "tcell"
path = "src/tcell.rs"

[dependencies]
cell-family = "0.1.0"
ghost-cell = "0.2.4"
qcell = "0.5.4"
